--- a/resume_2017-07.md
+++ b/resume_2017-07.md
@@ -1,6 +1,6 @@
 # 联系方式
 * 手机：17682301210
-* Email：<jeizas1210@gmail.com>
+* Email：jeizas1210@gmail.com
 * 微信：J_ie1314
 
 ---
@@ -40,7 +40,7 @@
 
 ---
 # 主要项目
-* 2015.8 - 2017.01 [喔图](https://www.alltuu.com)
+* 2015.8 - 2017.01 [喔图](http://www.alltuu.com)
 
 	> **S** 该项目是关于摄影的一个线上平台。再岗期间经历了由最初从摄影师发布服务供客户预约，到客户发布征集需求让摄影师报名抢订单的C2C平台，再到现如今的给摄影机构提供图片直播技术的2B平台转变的过程
 	    
@@ -54,6 +54,7 @@
 	* 使用线程池优化图片处理，解决图片裁剪导致内存OOM的问题，解决CMYK图片上传问题
 	* 使用spirng的AOP缓存DAO数据
 	* 网站首页静态化
+	* 待续
 	   
 	> **R** 在这个项目中感谢日常出现的一些问题，让我又机会研究并解决它。稍后详细说明。
 
@@ -81,4 +82,4 @@
 ---
 
 #致谢
-感谢您阅读我的简历，期待能有机会和您共事。
+感谢您阅读我的简历，期待能有机会和您共事。待续。。。
