modified:   resume_2017-07.md

--- a/resume_2017-07.md
+++ b/resume_2017-07.md
@@ -17,13 +17,13 @@
 
 # 技能清单
 * JAVA基础：理解io、多线程、集合等基础框架，了解JVM原理 
-* Web开发：熟悉Spring、struts2、Hibernate、Mybatis开源框架，对Spring源码有点了解
+* Web开发：熟悉Spring、Struts2、Hibernate、Mybatis开源框架，对Spring源码有点了解
 * 中间件：熟悉Docker、Rabbimq、Memcached、Websocket、Elasticsearch的使用
 * 设计模式：熟悉常用的设计模式
 * 数据库：熟悉MySQL数据库的开发
 * 前端：熟悉HTML/CSS/jquery技术
 * Android：熟悉android的四大组件、消息分发机制，能对其简单开发
-* 版本管理：能熟练使用git命令
+* 版本管理：熟练使用git命令
 * 自动部署：掌握jenkins+gitlab自动化部署
 * 服务器：熟悉linux常用的命令，掌握shell脚本编写
 
@@ -36,50 +36,57 @@
 - 配合web端及app端进行业务开发及接口提供
 - 内部crm系统的功能添加
 - 公司服务器部署维护
-- 短期android app的开发与维护
+- 短期android app的维护以及核心“闪传”功能的开发
 
 ---
 # 主要项目
-* 2015.8 - 2017.01 [喔图](http://www.alltuu.com)
+* 2015.8 - 2017.01 / 07 [喔图](http://www.alltuu.com)
 
-	> **S** 该项目是关于摄影的一个线上平台。再岗期间经历了由最初从摄影师发布服务供客户预约，到客户发布征集需求让摄影师报名抢订单的C2C平台，再到现如今的给摄影机构提供图片直播技术的2B平台转变的过程
+	> **S** 该项目是关于摄影的一个线上平台。再岗期间经历了由最初从摄影师发布服务供客户预约，到客户发布征集需求让摄影师报名抢订单的C2C平台，再到现如今给摄影机构提供图片直播技术的2B平台转变的过程
 	    
-	> **T** 在这个项目中,我主要负责的是网站功能服务端逻辑编码及接口提供
+	> **T** 在这个项目中,我主要负责的是网站功能服务器端逻辑编码及接口提供
 	
-	> **A** 再此期间主要有负责任务有：
-	* Maven搭建
+	> **A** 日常了负责日常业务需求的开发之外，还有对一下功能的研究：
+	* Maven私服搭建
 	* 内部gitlab服务器的搭建
 	* 热部署插件Jreble的使用
 	* quartz替换spring的scheduling定时器
 	* 使用线程池优化图片处理，解决图片裁剪导致内存OOM的问题，解决CMYK图片上传问题
+	* 解决图片直播用户浏览峰值服务器CPU达到100%，应用无响应的问题
 	* 使用spirng的AOP缓存DAO数据
 	* 网站首页静态化
-	* 待续
+	* 搭建Elasticsearch搜索服务器，提供摄影师和活动的检索。
 	   
 	> **R** 在这个项目中感谢日常出现的一些问题，让我又机会研究并解决它。稍后详细说明。
 
-* 2017.02 - 2017.07 [喔图 Android APP](http://a.app.qq.com/o/simple.jsp?pkgname=com.alltuu.android)
+* 2017.02 - 2017.06 [喔图 Android APP](http://a.app.qq.com/o/simple.jsp?pkgname=com.alltuu.android)
 
 	> **S** 由于公司内部原因，临危受命开发并维护android app
 
-	> **T** 学习android开发、android手机与相机之间的MTP通信协议、UI布局
+	> **T** 学习android开发、android手机与单反相机之间的MTP通信协议、UI布局
 
-	> **A** 在原有WIFI SD卡图片直播的基础上，待续。。。
+	> **A** 除了负责日常需求的开发之外，主要研究核心功能“闪传”的开发。以下是这段时间解决的一下些问题：
+	
+	* 拆分照片的读取和上传过程，使用线程池管理
+	* 解决裁剪大图出现的OOM问题
+	* 解决部分相机连接手机不能查看回放的问题
+	* 完成Android手机通过数据线实时读取相机照片功能、并实现标星自动上传的功能
+	* 解决照片的旋转问题
 
-	> **R** 顺利完成了通过手机OGT功能，实时获取相机照片并上传到服务器的功能，奠定了图片直播的基础，同时我对java多线程的理解。
+	> **R** 稳定的闪传功能，奠定了图片直播的基础。在学习Android的这段时间内，使我对java多线程有了更深的理解，同时掌握java的回调机制。最后由于性格的关系，不喜欢做UI，决定走向了java后端的道路。
 
 ---
 
 # 曾获荣誉
-###专业技能
+### 专业技能
 * 2013.12   [ACM 校赛 三等奖]
 
-###综合素质
+### 综合素质
 * 2014.11 [校三等奖学金] 
 * 2014.11 [校三好学生]
 * 2013.11 [校优秀团员]
 
 ---
 
-#致谢
-感谢您阅读我的简历，期待能有机会和您共事。待续。。。
+# 致谢
+感谢您阅读我的简历，期待能有机会和您共事。
