--- a/resume_2017-07.md
+++ b/resume_2017-07.md
@@ -17,7 +17,7 @@
 
 # 技能清单
 * JAVA基础：理解io、多线程、集合等基础框架，了解JVM原理 
-* Web开发：熟悉Spring、Struts2、Hibernate、Mybatis开源框架，对Spring源码有点了解
+* Web开发：熟悉Spring、Struts2、Hibernate、Mybatis开源框架
 * 中间件：熟悉Docker、Rabbimq、Memcached、Websocket、Elasticsearch的使用
 * 设计模式：熟悉常用的设计模式
 * 数据库：熟悉MySQL数据库的开发
@@ -32,11 +32,10 @@
 
 2015年8月--2017年7月 杭州喔影网络科技有限公司 java开发工程师
 
-- 主要从事后端代码的编写及维护
-- 配合web端及app端进行业务开发及接口提供
-- 内部crm系统的功能添加
+- 日常业务需求中后端代码的编写与维护
+- 内部CRM系统的功能添加
 - 公司服务器部署维护
-- 短期android app的维护以及核心“闪传”功能的开发
+- android app的维护以及核心“闪传”功能的开发
 
 ---
 # 主要项目
