--- a/resume_2017-07.md
+++ b/resume_2017-07.md
@@ -32,14 +32,14 @@
 
 2015年8月--2017年7月 杭州喔影网络科技有限公司 java开发工程师
 
-- 日常业务需求中后端代码的编写与维护
-- 公司服务器部署与维护
+- 日常业务需求中后端代码的编写
+- 公司服务器自动化部署平台搭建和代码库gitlab搭建与维护
 - 内部CRM系统的功能添加和修改
-- android app的维护以及核心“闪传”功能的开发
+- Android APP日常业务需求开发并独立开发“闪传”核心功能并（4个月）
 
 ---
 # 主要项目
-* 2015.8 - 2017.01 / 07 [喔图](http://www.alltuu.com)
+* 2015.8 - 2017.02 / 07 [喔图](http://www.alltuu.com)
 
 	> **S** 该项目是关于摄影的一个线上平台。再岗期间平台经历了最初由摄影师发布服务供客户预约模式，到客户发布需求征集摄影师的C2C模式，再到如今给摄影机构提供图片直播技术服务的2B平台转变的过程。
 	    
@@ -48,31 +48,32 @@
 	> **A** 日常了负责日常业务需求的开发之外，还有对一下功能的研究：
 	* Maven私服搭建
 	* 内部gitlab服务器的搭建
-	* 热部署插件Jreble的使用
-	* quartz替换spring的scheduleTimeTask定时器
-	* 使用线程池优化图片处理，解决图片裁剪导致内存OOM的问题，解决CMYK图片上传问题
+	* 热部署插件Jreble的使用，节省修改代码编译浪费的时间
+	* quartz替换原项目spring的scheduleTimeTask定时器
+	* 使用线程池优化图片处理
+	* 解决图片裁剪导致内存OOM的问题
+	* 解决CMYK图片上传问题
 	* 解决图片直播时用户浏览峰值服务器CPU达到100%，服务器无响应的问题
-	* 使用spirng的AOP缓存DAO数据
-	* 网站首页静态化
-	* 搭建Elasticsearch搜索服务器，提供摄影师和活动的检索。
-	   
-	> **R** 在这个项目的日常开发中，我尊重每次出现的问题、踩过额每一个坑，解决了就是成长，但是忽略了可能就会成为未来很大的一个隐患。愈来明白：当遇到问题时要沉着冷静，不要先说不行，解决问题的方法总会有，也许换一种思维方法就可以看到柳暗花明。
+	* 使用spirng的AOP缓存DAO数据，提高服务器吞吐量，减小数据库压力
+	* 网站首页静态化，减少服务器的压力
+	* 搭建Elasticsearch搜索服务器并替换原来搜索引擎solr	   
+	> **R** 在这个项目的日常开发中，我主动解决一些团队其他人遇到的问题，我尊重每次出现的BUG、踩过额每一个坑，解决了就是成长，但是忽略了可能就会成为未来很大的一个隐患。愈来明白：当遇到问题时要沉着冷静，不要先说不行，解决问题的方法总会有，也许换一种思维方法就可以看到柳暗花明。
 
-* 2017.02 - 2017.06 [喔图 Android APP](http://a.app.qq.com/o/simple.jsp?pkgname=com.alltuu.android)
+* 2017.03 - 2017.06 [喔图 Android APP](http://a.app.qq.com/o/simple.jsp?pkgname=com.alltuu.android)
 
-	> **S** 由于公司内部原因，临危受命开发并维护android app
+	> **S** 由于公司一些原因，临危受命并承担起了独立开发Android APP的任务
 
-	> **T** 学习android开发、android手机与单反相机之间的MTP通信协议、UI布局
+	> **T** 学习Android开发、Android手机与单反相机之间的MTP通信协议、UI布局、四大组件、消息通信等
 
-	> **A** 除了负责日常需求的开发之外，主要研究核心功能“闪传”的开发。以下是这段时间解决的一下些问题：
+	> **A** 除了负责日常需求的开发之外，主要研究核心功能“闪传”的开发。以下是这段时间解决的一些问题：
 	
-	* 拆分照片的读取和上传过程，使用线程池管理
-	* 解决裁剪大图出现的OOM问题
+	* 解决公司原来WIFI SD卡闪传不稳定的问题
+	* 解决裁剪bitmap大图出现的OOM问题
 	* 解决部分相机连接手机不能查看回放的问题
-	* 完成Android手机通过数据线实时读取相机照片功能、并实现标星自动上传的功能
-	* 解决照片的旋转问题
+	* 解决照片的自动旋转问题
+	* 实现相机标星自动上传的功能
 
-	> **R** 在学习Android的这段时间内，使我对java多线程有了更深的理解，同时掌握java的回调机制。最后由于性格的关系，不喜欢做UI，决定走向了java后端的道路。
+	> **R** 在开发“闪传”那段时间内，每天都处在风口浪尖上，由于手机USB开发相对比较冷门，最后还是坚定信心突破了技术屏障，并主动收集客户反馈，不断的改善产品体验，使喔图的图片直播技术走在了业界的前沿。最后由于自己不喜欢做UI，决定走向了java后端的道路。
 
 ---
 
