modified:   resume_2017-07.md

--- a/resume_2017-07.md
+++ b/resume_2017-07.md
@@ -18,7 +18,7 @@
 # 技能清单
 * JAVA基础：理解io、多线程、集合等基础框架，了解JVM原理 
 * Web开发：熟悉Spring、Struts2、Hibernate、Mybatis开源框架
-* 中间件：熟悉Docker、Rabbimq、Memcached、Websocket、Elasticsearch的使用
+* 中间件：熟悉Docker、Rabbitmq、Memcached、Websocket、Elasticsearch的使用
 * 设计模式：熟悉常用的设计模式
 * 数据库：熟悉MySQL数据库的开发
 * 前端：熟悉HTML/CSS/jquery技术
@@ -34,8 +34,8 @@
 
 - 日常业务需求中后端代码的编写
 - 公司服务器自动化部署平台搭建和代码库gitlab搭建与维护
-- 内部CRM系统的功能添加和修改
-- Android APP日常业务需求开发并独立开发“闪传”核心功能并（4个月）
+- 内部CRM系统功能的添加和修改
+- Android APP日常业务需求开发并独立开发“闪传”核心功能（4个月）
 
 ---
 # 主要项目
@@ -68,7 +68,7 @@
 	> **A** 除了负责日常需求的开发之外，主要研究核心功能“闪传”的开发。以下是这段时间解决的一些问题：
 	
 	* 解决公司原来WIFI SD卡闪传不稳定的问题
-	* 解决裁剪bitmap大图出现的OOM问题
+	* 解决裁剪bitmap大图出现的OOM问题，优化上传流程
 	* 解决部分相机连接手机不能查看回放的问题
 	* 解决照片的自动旋转问题
 	* 实现相机标星自动上传的功能
